Fixing Bug Nicole Align Content

--- a/Code/kasir/kasir.css
+++ b/Code/kasir/kasir.css
@@ -89,9 +89,9 @@
 .bagianKanan{
     background-color: rebeccapurple;
     width: 74.48%;
-    /* height: 500px; */
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 .kategoriCard{
